{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "Player",
            "id": "b2e98168-4f60-451c-8d6f-8a59c787c256",
            "actions": [
                {
                    "name": "PressA",
                    "type": "Button",
                    "id": "c180c03f-94fa-48e6-91b3-d3aacf86f02a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressB",
                    "type": "Button",
                    "id": "a0376d7c-2f8a-4278-ad62-51b4bee6d4b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressC",
                    "type": "Button",
                    "id": "90231247-73cf-4742-9b9f-23496e3d8aa3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressLeft",
                    "type": "Button",
                    "id": "02d8426a-f468-4f4c-8173-3d57aeed654e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressRight",
                    "type": "Button",
                    "id": "ebcfcadb-6aa9-4bbf-89db-4a43f6a1033f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressUp",
                    "type": "Button",
                    "id": "7be5886c-fda6-4cfe-92d5-05810577d9f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressDown",
                    "type": "Button",
                    "id": "843e40ce-7b4c-4d05-b1c4-9ad342bc5472",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ea15e4a-df90-4e5a-b7c1-1ad13696748a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5825c29e-951f-4ac9-93e3-c58fd62d414c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee622b5b-ee0a-4302-82d1-94173119324d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61b09c78-913f-4172-81b6-8eb724fc974a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcaae7f0-f4cd-436b-b2c6-7e7677008332",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6ecd8fe-987e-4033-8a6b-6fbbf24be883",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a53f697-1445-420b-b8b1-55e41881e4e7",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}